Rename to sample module

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "jp.ishikota.cryptopreference"
+        applicationId "jp.ishikota.cryptopreference.sample"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
